--- a/app/package.json
+++ b/app/package.json
@@ -9,13 +9,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
-    "firebase": "^7.21.0",
+    "firebase": "^7.22.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.9.1",
+    "react-image-file-resizer": "^0.3.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "uuid": "^8.3.1"
