--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "react-image-file-resizer": "^0.3.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-toastify": "^6.0.9",
     "uuid": "^8.3.1"
   },
   "scripts": {
