--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "file-upload-with-preview": "^4.1.0",
     "firebase": "^7.22.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
